--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 		<div id="videos-container">
 			<span id="master-video-container" class="video-container">
 				<h3 class="video-header">Master</h3> 
-				<video id="master-video" class="video" src="https://encoded-bongo-ca-youseeu-com.s3.amazonaws.com/i-18252/educator/_228880/973632-1605013116_2a241cb50a80586b4ac7903a3983d663/__228880_2f3c89ef8a30413abc060fe0f9a596fd_screenshare.mp4" controls width="960" height="540"></video>
+				<video id="master-video" class="video" controls width="960" height="540"></video>
 			</span>
 			<span id="master-video-container" class="video-container">
 				<h3 class="video-header">Slave</h3>
-				<video id="slave-video" class="video" src="https://encoded-bongo-ca-youseeu-com.s3.amazonaws.com/i-18252/educator/_228880/973632-1605013116_2a241cb50a80586b4ac7903a3983d663/__228880_2f3c89ef8a30413abc060fe0f9a596fd.mp4" controls width="960" height="540"></video>
+				<video id="slave-video" class="video" controls width="960" height="540"></video>
 			</span>
 		</div>
 		<script>
